# ai-skills-aggregator

./: .gitignore  README.md
.claude/: settings.local.json
app/: package-lock.json  package.json  vite.config.ts
app/.github/workflows/: ci.yml  release.yml
app/src/: App.tsx  index.css
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/src/: lib.rs
app/src-tauri/src/commands/: auth.rs  crud.rs  mod.rs  registry.rs  skills.rs  updates.rs
app/src-tauri/src/models/: agent.rs  error.rs  mod.rs  registry.rs  skill.rs
app/src-tauri/src/services/: auth_service.rs  backup_service.rs  crud_service.rs  download_service.rs  keyring_service.rs  mod.rs  registry_service.rs  skill_service.rs  template_service.rs  update_service.rs
app/src/__tests__/: setup.ts
app/src/components/layout/: DetailPanel.tsx  MainPanel.tsx  Sidebar.tsx
app/src/lib/: api.ts  types.ts
app/src/stores/: auth-store.ts  registry-store.ts  skills-store.ts  ui-store.ts  updates-store.ts
docs/: design-guidelines.md
plans/260204-1128-cross-platform-ai-skills-aggregator/: phase-01-project-setup.md  phase-02-core-architecture.md  phase-03-local-skills-discovery.md  phase-04-remote-skills-registry.md  phase-05-skills-crud-operations.md  phase-06-ui-implementation.md  phase-07-update-system.md  phase-08-testing-deployment.md  phase-09-github-authentication.md  plan.md
plans/260204-1128-cross-platform-ai-skills-aggregator/research/: researcher-01-cross-platform-frameworks.md  researcher-02-ai-agent-skills-sources.md
plans/reports/: ui-ux-designer-260204-1516-tauri-app-ui-redesign.md
(+2 files in other folders)
