[package]
name = "ai-skills-aggregator"
version = "0.1.0"
description = "A cross-platform AI skills aggregator"
authors = ["you"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
# Tauri core
tauri = { version = "2.10.0", features = [] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-os = "2"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# File system utilities
dirs = "5"
glob = "0.3"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Logging
log = "0.4"

# Error handling
thiserror = "1.0"

# Hashing (for cache keys)
md5 = "0.7"

# UUID generation
uuid = { version = "1", features = ["v4"] }

# Lazy initialization
once_cell = "1"

# Auth dependencies (OAuth PKCE)
keyring = "3"
base64 = "0.22"
sha2 = "0.10"
rand = "0.8"
urlencoding = "2"
